test/zinc_source/compile_errors/structs/11_anon_missing_member.zn
// expected-error: anonymous struct has no field 'y'

fn main() {
    point = struct {
        x: 1
    }
    print(point.y)
}
